# poly-lang

./: CHANGELOG.md  cabal.project  cabal.project.ci  poly-lang.cabal
.github/workflows/: haskell.yml
doc/: Syntax.org
src/: Main.hs  Parser.hs
src/Control/Carrier/: Parser.hs
src/Control/Effect/: Peek.hs  Satisfy.hs
src/Data/: Source.hs
src/Data/Parser/: Err.hs  Input.hs
src/Parser/: Lexer.hs  SExp.hs  Token.hs
src/Syntax/: Parse.hs  SExp.hs  Token.hs
src/Syntax/Parse/: Lexer.hs
src/Syntax/SExp/: Adornments.hs
src/Syntax/Token/: Keyword.hs  Symbol.hs
test/: Doctest.hs  Gen.hs  Test.hs
test/Test/: Lexer.hs  Parser.hs  Syntax.hs
