cabal-version: 2.2

name:         poly-lang
version:      0.1.0.0
synopsis:     A weird lisp.
description:  A lisp with an effect system.
bug-reports:  https://github.com/riz0id/poly-source/issues
license:      BSD-3-Clause
license-file: LICENSE
author:       Jacob Leach
maintainer:   jacob@z-tech.org
copyright:    Copyright (C) 2020-2022 Jacob D. Leach
category:     Poly
build-type:   Simple

tested-with:
  GHC == 8.8.3

extra-source-files:
  README.md
  CHANGELOG.md
  LICENSE

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import:           common
  hs-source-dirs:   src
  default-language: Haskell2010

  exposed-modules:
      Control.Effect.Satisfy
    , Control.Carrier.Parser
    , Parser.Lexer
    , Parser.Token

  build-depends:
      base          >=4.13 && <4.14
    , poly-source   >=0.1.0.0
    , fused-effects >=1.0.2.0

executable poly-lang
  import:           common
  main-is:          Main.hs
  default-language: Haskell2010
  hs-source-dirs:   src

  other-modules:
      Control.Effect.Satisfy
    , Control.Carrier.Parser
    , Parser.Lexer
    , Parser.Token

  build-depends:
      base          >=4.13 && <4.14
    , poly-source   >=0.1.0.0
    , poly-lang  
    , fused-effects

test-suite poly-lang-doctest
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        Doctest.hs
  hs-source-dirs: test
  build-depends:
      base
    , doctest    >=0.7 && <1.0
    , QuickCheck
    , poly-lang 

test-suite poly-lang-tests
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  other-modules:
      Test.Lexer
    , Gen

  build-depends:
      base
    , containers
    , transformers
    , fused-effects
    , poly-lang     
    , hedgehog       ^>= 1
    , hedgehog-fn    ^>= 1
    , tasty          ^>= 1.2
    , tasty-hedgehog ^>= 1
    , tasty-hunit    ^>= 0.10

source-repository head
  type:     git
  location: https://github.com/riz0id/poly-source
