cabal-version: 2.2

name:         poly-lang
version:      0.1.0.0
synopsis:     A weird lisp.
description:  A lisp with an effect system.
bug-reports:  https://github.com/riz0id/poly-source/issues
license:      BSD-3-Clause
license-file: LICENSE
author:       Jacob Leach
maintainer:   jacob@z-tech.org
copyright:    Copyright (C) 2020-2022 Jacob D. Leach
category:     Poly
build-type:   Simple

tested-with:
  GHC == 8.8.3

extra-source-files:
  README.md
  CHANGELOG.md
  LICENSE

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import:           common
  hs-source-dirs:   src
  default-language: Haskell2010

  exposed-modules:
      Syntax.Parse
    , Syntax.SExp
    , Syntax.SExp.Adornments
    , Syntax.Token
    , Syntax.Token.Symbol
    , Syntax.Token.Keyword
    , Control.Effect.Parser
    , Control.Effect.Parser.Internal
    , Control.Carrier.Parser
    , Data.Parser.Input
    , Data.Parser.Err
    , Data.Parser.Excerpt
    , Data.Parser.Notice
    , Data.Source.Loc
    , Data.Source.Pos
    , Data.Source.Range
    , Data.Source.Span
    , Data.Source.Delta

  build-depends:
      base          >=4.13 && <4.14
    , text          >=1.2.4.0
    , algebras      >=0.1.0.0
    , containers    >=0.6.2.1
    , prettyprinter >= 1.5.1
    , lens          >= 4.19.2
    , fused-effects >=1.0.2.0
    , transformers  >= 0.5.6.2
    , prettyprinter-ansi-terminal ^>= 1.1

executable polylang
  import:           common
  main-is:          src/Main.hs
  default-language: Haskell2010

  build-depends:
      base          >= 4.13 && <4.14
    , text          >= 1.2.4.0
    , poly-source   >= 1.0.0.0
    , poly-parse    >= 0.1.0.0
    , poly-lang  
    , fused-effects

test-suite poly-lang-tests
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  other-modules:
      Test.Parser

  build-depends:
      base
    , containers
    , transformers
    , fused-effects
    , algebras      >=0.1.0.0
    , poly-lang
    , poly-source    >=1.0.0.0
    , text           >=1.2.4.0
    , hedgehog       ^>= 1
    , hedgehog-fn    ^>= 1
    , tasty          ^>= 1.2
    , tasty-hedgehog ^>= 1
    , tasty-hunit    ^>= 0.10

source-repository head
  type:     git
  location: https://github.com/riz0id/poly-lang
